# VIO2

init_eskf/: CMakeLists.txt  CODE_REVIEW_FIXES.md  EUROC_PARSER.md  GRAVITY_ALIGNMENT.md  README.md  README_TEST.md  STRUCTURE.md  package.xml
init_eskf/include/init_eskf/: euroc_parser.h  gt_reader.h  init_eskf.h  init_eskf_node.h  utility.h
init_eskf/launch/: init_eskf.launch
init_eskf/scripts/: test_euroc.sh  test_euroc_parser.sh
init_eskf/src/: euroc_example.cpp  euroc_parser.cpp  euroc_test.cpp  gt_reader.cpp  init_eskf.cpp  init_eskf_node.cpp
init_eskf/src/utility/: utility.cpp
loop_fusion/src/: pose_graph.cpp
ov/ov_core/src/feat/: Feature.h  FeatureDatabase.h  FeatureHelper.h  FeatureInitializer.h  FeatureInitializerOptions.h
ov/ov_core/src/track/: Grider_FAST.h  TrackAruco.cpp  TrackAruco.h  TrackBase.cpp  TrackBase.h  TrackDescriptor.cpp  TrackDescriptor.h  TrackKLT.cpp  TrackSIM.h
ov/ov_feature_pub/: CMakeLists.txt  README.md  package.xml
ov/ov_feature_pub/launch/: ov_feature_pub.launch
ov/ov_feature_pub/src/: ov_feature_pub_node.cpp
ov/ov_init/src/: dummy.cpp  test_dynamic_init.cpp
ov/ov_init/src/ceres/: Factor_GenericPrior.h  Factor_ImageReprojCalib.h  Factor_ImuCPIv1.h  State_JPLQuatLocal.h
ov/ov_init/src/dynamic/: DynamicInitializer.h
ov/ov_init/src/init/: InertialInitializer.h
ov/ov_init/src/sim/: SimulatorInit.h
ov/ov_init/src/static/: StaticInitializer.h
ov/ov_init/src/utils/: helper.h
vins_estimator/launch/: euroc_bag.launch
